--- a/First Unity Project/Assembly-CSharp.csproj
+++ b/First Unity Project/Assembly-CSharp.csproj
@@ -38,6 +38,7 @@
   <ItemGroup>
      <Compile Include="Assets\LifeCycle.cs" />
      <Compile Include="Assets\Move.cs" />
+     <Compile Include="Assets\MyBall.cs" />
     <Reference Include="UnityEngine">
         <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.10f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
