--- a/First Unity Project/Assembly-CSharp.csproj
+++ b/First Unity Project/Assembly-CSharp.csproj
@@ -36,9 +36,10 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
-     <Compile Include="Assets\LifeCycle.cs" />
-     <Compile Include="Assets\Move.cs" />
-     <Compile Include="Assets\MyBall.cs" />
+     <Compile Include="Assets\Scripts\LifeCycle.cs" />
+     <Compile Include="Assets\Scripts\Move.cs" />
+     <Compile Include="Assets\Scripts\MyBall.cs" />
+     <Compile Include="Assets\Scripts\otherBall.cs" />
     <Reference Include="UnityEngine">
         <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.10f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
