--- a/TopDown RPG/Assembly-CSharp.csproj
+++ b/TopDown RPG/Assembly-CSharp.csproj
@@ -55,6 +55,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\GameManager.cs" />
      <Compile Include="Assets\Scripts\PlayerAction.cs" />
  <Reference Include="UnityEngine">
  <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.10f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
@@ -671,13 +672,13 @@
       <Project>{A9657D45-FD24-4419-3920-3D7D663FFBF8}</Project>
       <Name>Unity.2D.Tilemap.Extras.Editor</Name>
     </ProjectReference>
-    <ProjectReference Include="Unity.2D.Tilemap.Extras.csproj">
-      <Project>{3FC9FE21-2D8C-81F7-9B3F-F15982624FD9}</Project>
-      <Name>Unity.2D.Tilemap.Extras</Name>
-    </ProjectReference>
     <ProjectReference Include="Unity.2D.PixelPerfect.Samples.Editor.csproj">
       <Project>{947780AD-4CA9-0FED-8130-8106CE36E0FA}</Project>
       <Name>Unity.2D.PixelPerfect.Samples.Editor</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.2D.Tilemap.Extras.csproj">
+      <Project>{3FC9FE21-2D8C-81F7-9B3F-F15982624FD9}</Project>
+      <Name>Unity.2D.Tilemap.Extras</Name>
     </ProjectReference>
     <ProjectReference Include="Unity.2D.PixelPerfect.Samples.csproj">
       <Project>{7E63F8FC-4816-010D-03FC-BA50214B4087}</Project>
