--- a/TopDown RPG/Assembly-CSharp.csproj
+++ b/TopDown RPG/Assembly-CSharp.csproj
@@ -39,6 +39,8 @@
      <Compile Include="Assets\Scripts\GameManager.cs" />
      <Compile Include="Assets\Scripts\ObjData.cs" />
      <Compile Include="Assets\Scripts\PlayerAction.cs" />
+     <Compile Include="Assets\Scripts\QuestData.cs" />
+     <Compile Include="Assets\Scripts\QuestManager.cs" />
      <Compile Include="Assets\Scripts\TalkManager.cs" />
     <Reference Include="UnityEngine">
         <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.10f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
