--- a/TopDown RPG/Assembly-CSharp.csproj
+++ b/TopDown RPG/Assembly-CSharp.csproj
@@ -42,6 +42,7 @@
      <Compile Include="Assets\Scripts\QuestData.cs" />
      <Compile Include="Assets\Scripts\QuestManager.cs" />
      <Compile Include="Assets\Scripts\TalkManager.cs" />
+     <Compile Include="Assets\Scripts\TypeEffect.cs" />
     <Reference Include="UnityEngine">
         <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.10f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
