--- a/Shooting Game/Assembly-CSharp.csproj
+++ b/Shooting Game/Assembly-CSharp.csproj
@@ -37,6 +37,8 @@
   </PropertyGroup>
   <ItemGroup>
      <Compile Include="Assets\Scrippts\Bullet.cs" />
+     <Compile Include="Assets\Scrippts\Enemy.cs" />
+     <Compile Include="Assets\Scrippts\GameManager.cs" />
      <Compile Include="Assets\Scrippts\Player.cs" />
     <Reference Include="UnityEngine">
         <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.10f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
